syntax = "proto3";

package profile;

option  go_package = "github.com/flavioesteves/wizer-app/broker/proto";

import "google/protobuf/empty.proto";

message Profile {
  string profile_id = 1;
  string user_id = 2;
  string gender = 3;
  int32 birth_year = 4;
  int32 height_cm = 5;
  int32 weight_kg = 6;
  string body_fat_percentage = 7;
  string goal = 8;
}

message CreateProfileRequest {
  Profile profile = 1;
}

message GetProfileRequest {
  string profile_id = 1;
}

message UpdateProfileRequest {
  Profile profile = 1;
}

message DeleteProfileRequest {
  string profile_id = 1;
}

message GetAllProfilesRequest {
// Potential parameters for filtering, pagination
}

message GetAllProfilesResponse {
  repeated Profile profiles = 1;
}

message ProfileResponse {
  Profile profile = 1;
}

service ProfileService {
  rpc CreateProfile (CreateProfileRequest) returns (ProfileResponse);
  rpc GetProfile (GetProfileRequest) returns(ProfileResponse);
  rpc UpdateProfile (UpdateProfileRequest) returns (ProfileResponse);
  rpc DeleteProfile (DeleteProfileRequest) returns (google.protobuf.Empty);
  rpc GetAllProfiles (GetAllProfilesRequest) returns (GetAllProfilesResponse);
}
