syntax = "proto3";

package user;

option  go_package = "github.com/flavioesteves/wizer-app/broker/proto";

import "google/protobuf/empty.proto";


enum Role {
  UNSPECIFIED = 0;
  TRAINER = 1;
  TRAINEE = 2;
}

message User {
  string id = 1;
  string email = 2;
  string password = 3;
  Role Role = 4;

  string created_at = 5;
  string updated_at = 6;
}

message CreateUserRequest {
  User user = 1;
}

message GetUserRequest {
  string user_id = 1;
}

message UpdateUserRequest {
  User user = 1;
}

message DeleteUserRequest {
  string user_id =1;
}

message GetAllUsersRequest {
// Potential parameters for filtering, pagination
}

message UserResponse {
  User user =1;
}

message GetAllUsersResponse {
  repeated User users =1;
}

service UserService {
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc GetUser (GetUserRequest) returns(UserResponse);
  rpc UpdateUser (UpdateUserRequest) returns(UserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
  rpc GetAllUsers (GetAllUsersRequest) returns (GetAllUsersResponse);
}
